--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.application.name=Peliculas
 
 spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/peliculas
+#spring.datasource.url=jdbc:h2:~/peliculas
+spring.datasource.url=jdbc:h2:mem:productosdb
 spring.datasource.username=user
 spring.datasource.password=user
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
